Fixed sidebar shifting down with popup open

--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -212,7 +212,14 @@ p.popup--error {
 }
 
 .popup--blur {
+    pointer-events: none;
     filter: blur(2px);
+}
+
+.popup--container {
+    position: absolute;
+    top: 0;
+    width: 100%;
 }
 
 
